Add Docker configuration and enhance Spark application setup
- Introduced .dockerignore to exclude unnecessary files from Docker context.
- Updated pom.xml to include Jackson dependencies for JSON processing.
- Enhanced docker-compose.yml with health checks for Kafka and Spark services.
- Improved application-spark.yml and application.yml for better configuration management.
- Added JdbcConfig and KafkaConfig classes for database and Kafka setup in Spark profile.
- Refactored AdEventSparkStreamer for improved batch processing and error handling.